--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,20 @@
             <version>4.12</version>
         </dependency>
 
+        <dependency>
+            <groupId>zql</groupId>
+            <artifactId>zql</artifactId>
+            <version>1.0</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/lib/zql.jar</systemPath>
+        </dependency>
+
+        <dependency>
+            <groupId>jline</groupId>
+            <artifactId>jline</artifactId>
+            <version>0.9.94</version>
+        </dependency>
+
     </dependencies>
 
 
